Fix USB print issues and web-based access
1. Run cupsd as root (to work with usb backend)
2. Set appropriate file permissions for usb backend in /etc/init.d/cupsd
4. Disable web-based configuration by default, but can be enabled at runtime
5. Allow access only from localhost and 192.168.1.0/24

Change-Id: I2aaba21ef107052ac181c92e862908ead36ac39a
Signed-off-by: Mohammed Riyaz Piyarajohn <mpiyaraj@codeaurora.org>
Signed-off-by: Mathieu Olivari <mathieu@codeaurora.org>

not necessary anymore:
[3. Install html files to support web-based configuration]

Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/net/cups/files/etc/cups/cupsd.conf
+++ b/net/cups/files/etc/cups/cupsd.conf
@@ -23,8 +23,11 @@ MaxPrinterHistory 10
 #PrintcapFormat BSD
 RequestRoot /var/cups
 #RemoteRoot remroot
-User nobody
-Group nogroup
+#User nobody
+#Group nogroup
+# root permissions required to make cups work with the usb backend
+User root
+Group root
 RIPCache auto
 TempDir /var/cups
 Port 631
@@ -35,11 +38,13 @@ Browsing Yes
 BrowsingWebIF Yes
 BrowseLocalProtocols DNSSD
 DefaultShared Yes
+WebInterface no
+Listen /var/run/cups/cups.sock
 
 ServerAlias *
 
 <Location />
-Order Deny,Allow
+Order Allow,Deny
 Allow From 127.0.0.1
 Allow From 192.168.1.0/24
 </Location>
@@ -48,5 +53,6 @@ Allow From 192.168.1.0/24
 AuthType Basic
 AuthClass System
 Order Allow,Deny
-Allow From All
+Allow From 127.0.0.1
+Allow From 192.168.1.0/24
 </Location>
