--- a/utils/qpdf/Makefile
+++ b/utils/qpdf/Makefile
@@ -8,12 +8,12 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=qpdf
-PKG_VERSION:=4.0.1
+PKG_VERSION:=6.0.0
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=@SF/$(PKG_NAME)
-PKG_MD5SUM:=093baece867a0a7e07774bd4008156b3
+PKG_MD5SUM:=e014bd3ecf1c4d1a520bbc14d84ac20e
 
 PKG_INSTALL:=1
 
@@ -36,14 +36,13 @@ or for people who just want to look at the innards of a PDF file to learn more
 about how they work.
 endef
 
+CONFIGURE_ARGS+= \
+	--with-random=/dev/urandom
+
 define Package/qpdf/install
 	$(INSTALL_DIR) $(1)/usr/bin $(1)/usr/lib
 	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/bin/* $(1)/usr/bin/
 	$(CP) $(PKG_INSTALL_DIR)/usr/lib/* $(1)/usr/lib/
-endef
-
-define Build/Compile
-	$(call Build/Compile/Default, LIBTOOL="./libtool --tag=CXX")
 endef
 
 define Build/InstallDev
