--- a/libs/lcms2/Makefile
+++ b/libs/lcms2/Makefile
@@ -8,12 +8,14 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=lcms2
-PKG_VERSION:=2.7
+PKG_VERSION:=2.8
+#PKG_VERSION:=2.7
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=@SF/lcms
-PKG_MD5SUM:=06c1626f625424a811fb4b5eb070839d
+PKG_MD5SUM:=87a5913f1a52464190bb655ad230539c
+#PKG_MD5SUM:=06c1626f625424a811fb4b5eb070839d
 
 PKG_INSTALL:=1
 
