--- a/net/cups-bjnp/Makefile
+++ b/net/cups-bjnp/Makefile
@@ -8,12 +8,14 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=cups-bjnp
-PKG_VERSION:=1.2
+PKG_VERSION:=2.0
+#PKG_VERSION:=1.2
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=@SF/cups-bjnp
-PKG_MD5SUM:=8672b4585b71dee6dcefa00fbbbe7698
+PKG_MD5SUM:=8a337091b65abfdd70191129efefb9b3
+#PKG_MD5SUM:=8672b4585b71dee6dcefa00fbbbe7698
 
 PKG_BUILD_DEPENDS:=cups
 
